添加了一些基类

--- a/ISAAC_Circle/ISAAC_Circle.vcxproj
+++ b/ISAAC_Circle/ISAAC_Circle.vcxproj
@@ -141,8 +141,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Factory.cpp" />
+    <ClCompile Include="Hero.cpp" />
+    <ClCompile Include="SfmlProject.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Factory.h" />
+    <ClInclude Include="Hero.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
