--- a/ISAAC_Circle/ISAAC_Circle.vcxproj
+++ b/ISAAC_Circle/ISAAC_Circle.vcxproj
@@ -518,6 +518,7 @@
       <AdditionalBMIDirectories>E:\DeveloperKits_And_IDE\SFML\Project\ISAAC_Circle\\SFML-2.6.1\include</AdditionalBMIDirectories>
       <LinkCompiled>true</LinkCompiled>
     </ClCompile>
+    <ClCompile Include="Source\Core\World.cpp" />
     <ClCompile Include="Source\Tools\SFMLTool.cpp" />
     <ClCompile Include="Source\Tools\TextureParser.cpp" />
   </ItemGroup>
@@ -532,6 +533,7 @@
     <ClInclude Include="Source\Animation\SpriteAnimationClip.h" />
     <ClInclude Include="Source\Core\Actor.h" />
     <ClInclude Include="Source\Core\Game.h" />
+    <ClInclude Include="Source\Core\World.h" />
     <ClInclude Include="Source\ThirdParty\nlohmann\json.hpp" />
     <ClInclude Include="Source\ThirdParty\nlohmann\json_fwd.hpp" />
     <ClInclude Include="Source\Tools\GameLog.h" />
