--- a/ISAAC_Circle/ISAAC_Circle.vcxproj
+++ b/ISAAC_Circle/ISAAC_Circle.vcxproj
@@ -372,6 +372,7 @@
     <ClCompile Include="Source\Animation\AnimationSequence.cpp" />
     <ClCompile Include="Source\Animation\SpriteAnimationClip.cpp" />
     <ClCompile Include="Source\Animation\SwingingSprite.cpp" />
+    <ClCompile Include="Source\Core\Component\SpriteContainer.cpp" />
     <ClCompile Include="Source\Core\Object.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -612,6 +613,7 @@
     <ClInclude Include="Source\Animation\AnimationSequence.h" />
     <ClInclude Include="Source\Animation\SpriteAnimationClip.h" />
     <ClInclude Include="Source\Animation\SwingingSprite.h" />
+    <ClInclude Include="Source\Core\Component\SpriteContainer.h" />
     <ClInclude Include="Source\Core\Object.h" />
     <ClInclude Include="Source\Core\Game.h" />
     <ClInclude Include="Source\Core\Gamemanager.h" />
